# fastapiSabrina

./: README.md  pyproject.toml
fastapi_event/: app.py
